[project]
name = "biurokratija"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.4.26",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]
